working on startup flicker fix

--- a/app/app.global.css
+++ b/app/app.global.css
@@ -1,3 +1,28 @@
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+#app {
+  /* Disable text selection, or your app will feel like a web page */
+  -webkit-user-select: none;
+  -webkit-app-region: drag;
+
+  /* Cover the whole window */
+  height: 100%;
+
+  /* Make sure this matches the native window background color that you pass to
+   * electron.BrowserWindow({...}), otherwise your app startup will look janky. */
+  background: #6290c3;
+
+  /* Smoother startup */
+  animation: fadein 0.5s;
+}
+
 body {
   position: relative;
   color: white;
